Add a reset button to clear the grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container"></div>
+    <button class="reset-button">Reset</button>
     <script src="script.js"></script>
   </body>
 </html>
