Add the feature of changing the number of squares inside the grid

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="container"></div>
     <button class="reset-button">Reset</button>
+    <button class="size-button">Adjust grid size</button>
     <script src="script.js"></script>
   </body>
 </html>
