Add some styling for the webpage

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>etch-a-sketch</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1 class="title">Welcome to etch-a-sketch</h1>
     <div class="container"></div>
+    <!-- <button class="erase-button">Erase</button> -->
     <button class="reset-button">Reset</button>
     <button class="size-button">Adjust grid size</button>
     <script src="script.js"></script>
